<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="login.LoginFragment">

    <TextView
        android:id="@+id/tv_login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faca_login_para_acessar"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/tv_login_prompt"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:layout_below="@id/et_email"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_senha"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_password"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"
        android:layout_below="@id/tv_forgot_password"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ou"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"
        android:layout_below="@id/tv_or"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"
        android:layout_below="@id/btn_login_google"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_usuario_criar_conta"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@id/btn_login_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
